src/com/rapidminer/operator/modelling/converters/tuffy/parser/TuffyMLNGrammarParser.java
// Generated from TuffyMLNGrammar.g4 by ANTLR 4.2
package com.rapidminer.operator.modelling.converters.tuffy.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TuffyMLNGrammarParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WEIGHT_OF_LAST=1, LINE_COMMENT=2, COMMENT=3, WS=4, NL=5, LP=6, RP=7, LCP=8, 
		RCP=9, LSP=10, RSP=11, DOTS=12, DOT=13, BAR=14, COL=15, COM=16, EXCL=17, 
		AND=18, OR=19, IMPLIES=20, IFF=21, U_QUANT=22, E_QUANT=23, EQ=24, PLUS=25, 
		STAR=26, GT=27, LT=28, GE=29, LE=30, NE=31, MINUS=32, SLASH=33, MOD=34, 
		INT=35, FLOAT=36, VAR_ID=37, CONST_ID=38, STRING=39;
	public static final String[] tokenNames = {
		"<INVALID>", "WEIGHT_OF_LAST", "LINE_COMMENT", "COMMENT", "WS", "NL", 
		"'('", "')'", "'{'", "'}'", "'['", "']'", "'...'", "'.'", "'|'", "':'", 
		"','", "'!'", "'^'", "'v'", "'=>'", "'<=>'", "U_QUANT", "E_QUANT", "'='", 
		"'+'", "'*'", "'>'", "'<'", "'>='", "'<='", "'!='", "'-'", "'/'", "'%'", 
		"INT", "FLOAT", "VAR_ID", "CONST_ID", "STRING"
	};
	public static final int
		RULE_ruleFile = 0, RULE_dbFile = 1, RULE_infFile = 2, RULE_queryFile = 3, 
		RULE_constant = 4, RULE_expVariable = 5, RULE_variableLabel = 6, RULE_variable = 7, 
		RULE_number = 8, RULE_exclType = 9, RULE_type = 10, RULE_startNum = 11, 
		RULE_endNum = 12, RULE_cardinality = 13, RULE_constantList = 14, RULE_variableList = 15, 
		RULE_typeList = 16, RULE_exNumList = 17, RULE_plainNumList = 18, RULE_numList = 19, 
		RULE_or = 20, RULE_eq = 21, RULE_function = 22, RULE_builtinFunctionSymbol = 23, 
		RULE_builtinPrefixFunctionSymbol = 24, RULE_predicate = 25, RULE_builtinPredicateSymbol = 26, 
		RULE_predicateApplication = 27, RULE_functionApplication = 28, RULE_argument = 29, 
		RULE_groundPredicateApplication = 30, RULE_groundFunctionApplication = 31, 
		RULE_groundArgument = 32, RULE_returnValue = 33, RULE_functionDef = 34, 
		RULE_typeDecl = 35, RULE_plainPredicate = 36, RULE_closedWorldPredicate = 37, 
		RULE_predicateDecl = 38, RULE_functionDecl = 39, RULE_plainFormula = 40, 
		RULE_probability = 41, RULE_probabilityStatement = 42, RULE_weight = 43, 
		RULE_weights = 44, RULE_weightedFormula = 45, RULE_hardFormula = 46, RULE_formula = 47, 
		RULE_quantifier = 48, RULE_quantification = 49, RULE_groundFormula = 50;
	public static final String[] ruleNames = {
		"ruleFile", "dbFile", "infFile", "queryFile", "constant", "expVariable", 
		"variableLabel", "variable", "number", "exclType", "type", "startNum", 
		"endNum", "cardinality", "constantList", "variableList", "typeList", "exNumList", 
		"plainNumList", "numList", "or", "eq", "function", "builtinFunctionSymbol", 
		"builtinPrefixFunctionSymbol", "predicate", "builtinPredicateSymbol", 
		"predicateApplication", "functionApplication", "argument", "groundPredicateApplication", 
		"groundFunctionApplication", "groundArgument", "returnValue", "functionDef", 
		"typeDecl", "plainPredicate", "closedWorldPredicate", "predicateDecl", 
		"functionDecl", "plainFormula", "probability", "probabilityStatement", 
		"weight", "weights", "weightedFormula", "hardFormula", "formula", "quantifier", 
		"quantification", "groundFormula"
	};

	@Override
	public String getGrammarFileName() { return "TuffyMLNGrammar.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TuffyMLNGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class RuleFileContext extends ParserRuleContext {
		public List<TerminalNode> NL() { return getTokens(TuffyMLNGrammarParser.NL); }
		public List<PredicateDeclContext> predicateDecl() {
			return getRuleContexts(PredicateDeclContext.class);
		}
		public FunctionDeclContext functionDecl(int i) {
			return getRuleContext(FunctionDeclContext.class,i);
		}
		public List<FormulaContext> formula() {
			return getRuleContexts(FormulaContext.class);
		}
		public List<FunctionDeclContext> functionDecl() {
			return getRuleContexts(FunctionDeclContext.class);
		}
		public List<TypeDeclContext> typeDecl() {
			return getRuleContexts(TypeDeclContext.class);
		}
		public TerminalNode NL(int i) {
			return getToken(TuffyMLNGrammarParser.NL, i);
		}
		public FormulaContext formula(int i) {
			return getRuleContext(FormulaContext.class,i);
		}
		public TypeDeclContext typeDecl(int i) {
			return getRuleContext(TypeDeclContext.class,i);
		}
		public PredicateDeclContext predicateDecl(int i) {
			return getRuleContext(PredicateDeclContext.class,i);
		}
		public RuleFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruleFile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TuffyMLNGrammarListener ) ((TuffyMLNGrammarListener)listener).enterRuleFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TuffyMLNGrammarListener ) ((TuffyMLNGrammarListener)listener).exitRuleFile(this);
		}
	}

	public final RuleFileContext ruleFile() throws RecognitionException {
		RuleFileContext _localctx = new RuleFileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_ruleFile);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(105);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NL) {
					{
					{
					setState(102); match(NL);
					}
					}
					setState(107);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(119);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					setState(116);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
					while ( _alt!=2 && _alt!=-1 ) {
						if ( _alt==1 ) {
							{
							{
							setState(108); typeDecl();
							setState(110); 
							_errHandler.sync(this);
							_la = _input.LA(1);
							do {
								{
								{
								setState(109); match(NL);
								}
								}
								setState(112); 
								_errHandler.sync(this);
								_la = _input.LA(1);
							} while ( _la==NL );
							}
							} 
						}
						setState(118);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
					}
					}
					break;
				}
				setState(135);
				switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
				case 1:
					{
					setState(132);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
					while ( _alt!=2 && _alt!=-1 ) {
						if ( _alt==1 ) {
							{
							{
							setState(123);
							switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
							case 1:
								{
								setState(121); predicateDecl();
								}
								break;

							case 2:
								{
								setState(122); functionDecl();
								}
								break;
							}
							setState(126); 
							_errHandler.sync(this);
							_la = _input.LA(1);
							do {
								{
								{
								setState(125); match(NL);
								}
								}
								setState(128); 
								_errHandler.sync(this);
								_la = _input.LA(1);
							} while ( _la==NL );
							}
							} 
						}
						setState(134);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
					}
					}
					break;
				}
				setState(145);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LP) | (1L << LSP) | (1L << EXCL) | (1L << U_QUANT) | (1L << E_QUANT) | (1L << PLUS) | (1L << MINUS) | (1L << INT) | (1L << FLOAT) | (1L << VAR_ID) | (1L << CONST_ID) | (1L << STRING))) != 0)) {
					{
					{
					setState(137); formula();
					setState(139); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(138); match(NL);
						}
						}
						setState(141); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==NL );
					}
					}
					setState(147);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DbFileContext extends ParserRuleContext {
		public List<TerminalNode> NL() { return getTokens(TuffyMLNGrammarParser.NL); }
		public GroundFormulaContext groundFormula(int i) {
			return getRuleContext(GroundFormulaContext.class,i);
		}
		public List<GroundFormulaContext> groundFormula() {
			return getRuleContexts(GroundFormulaContext.class);
		}
		public TerminalNode NL(int i) {
			return getToken(TuffyMLNGrammarParser.NL, i);
		}
		public DbFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dbFile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TuffyMLNGrammarListener ) ((TuffyMLNGrammarListener)listener).enterDbFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TuffyMLNGrammarListener ) ((TuffyMLNGrammarListener)listener).exitDbFile(this);
		}
	}

	public final DbFileContext dbFile() throws RecognitionException {
		DbFileContext _localctx = new DbFileContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_dbFile);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LP) | (1L << EXCL) | (1L << MINUS) | (1L << INT) | (1L << FLOAT) | (1L << VAR_ID) | (1L << CONST_ID) | (1L << STRING))) != 0)) {
				{
				{
				setState(150); groundFormula();
				setState(152); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(151); match(NL);
					}
					}
					setState(154); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==NL );
				}
				}
				setState(160);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InfFileContext extends ParserRuleContext {
		public List<ProbabilityStatementContext> probabilityStatement() {
			return getRuleContexts(ProbabilityStatementContext.class);
		}
		public List<TerminalNode> NL() { return getTokens(TuffyMLNGrammarParser.NL); }
		public ProbabilityStatementContext probabilityStatement(int i) {
			return getRuleContext(ProbabilityStatementContext.class,i);
		}
		public TerminalNode NL(int i) {
			return getToken(TuffyMLNGrammarParser.NL, i);
		}
		public InfFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_infFile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TuffyMLNGrammarListener ) ((TuffyMLNGrammarListener)listener).enterInfFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TuffyMLNGrammarListener ) ((TuffyMLNGrammarListener)listener).exitInfFile(this);
		}
	}

	public final InfFileContext infFile() throws RecognitionException {
		InfFileContext _localctx = new InfFileContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_infFile);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(169);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LP) | (1L << EXCL) | (1L << MINUS) | (1L << INT) | (1L << FLOAT) | (1L << VAR_ID) | (1L << CONST_ID) | (1L << STRING))) != 0)) {
				{
				{
				setState(161); probabilityStatement();
				setState(163); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(162); match(NL);
					}
					}
					setState(165); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==NL );
				}
				}
				setState(171);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QueryFileContext extends ParserRuleContext {
		public List<TerminalNode> NL() { return getTokens(TuffyMLNGrammarParser.NL); }
		public List<PredicateDeclContext> predicateDecl() {
			return getRuleContexts(PredicateDeclContext.class);
		}
		public TerminalNode NL(int i) {
			return getToken(TuffyMLNGrammarParser.NL, i);
		}
		public PredicateDeclContext predicateDecl(int i) {
			return getRuleContext(PredicateDeclContext.class,i);
		}
		public QueryFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_queryFile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TuffyMLNGrammarListener ) ((TuffyMLNGrammarListener)listener).enterQueryFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TuffyMLNGrammarListener ) ((TuffyMLNGrammarListener)listener).exitQueryFile(this);
		}
	}

	public final QueryFileContext queryFile() throws RecognitionException {
		QueryFileContext _localctx = new QueryFileContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_queryFile);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(180);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STAR) | (1L << VAR_ID) | (1L << CONST_ID))) != 0)) {
				{
				{
				setState(172); predicateDecl();
				setState(174); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(173); match(NL);
					}
					}
					setState(176); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==NL );
				}
				}
				setState(182);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(TuffyMLNGrammarParser.STRING, 0); }
		public TerminalNode CONST_ID() { return getToken(TuffyMLNGrammarParser.CONST_ID, 0); }
		public ConstantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constant; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TuffyMLNGrammarListener ) ((TuffyMLNGrammarListener)listener).enterConstant(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TuffyMLNGrammarListener ) ((TuffyMLNGrammarListener)listener).exitConstant(this);
		}
	}

	public final ConstantContext constant() throws RecognitionException {
		ConstantContext _localctx = new ConstantContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_constant);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(183);
			_la = _input.LA(1);
			if ( !(_la==CONST_ID || _la==STRING) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpVariableContext extends ParserRuleContext {
		public TerminalNode PLUS() { return getToken(TuffyMLNGrammarParser.PLUS, 0); }
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public ExpVariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expVariable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TuffyMLNGrammarListener ) ((TuffyMLNGrammarListener)listener).enterExpVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TuffyMLNGrammarListener ) ((TuffyMLNGrammarListener)listener).exitExpVariable(this);
		}
	}

	public final ExpVariableContext expVariable() throws RecognitionException {
		ExpVariableContext _localctx = new ExpVariableContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_expVariable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(185); match(PLUS);
			setState(186); variable();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableLabelContext extends ParserRuleContext {
		public TerminalNode VAR_ID() { return getToken(TuffyMLNGrammarParser.VAR_ID, 0); }
		public TerminalNode CONST_ID() { return getToken(TuffyMLNGrammarParser.CONST_ID, 0); }
		public VariableLabelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableLabel; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TuffyMLNGrammarListener ) ((TuffyMLNGrammarListener)listener).enterVariableLabel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TuffyMLNGrammarListener ) ((TuffyMLNGrammarListener)listener).exitVariableLabel(this);
		}
	}

	public final VariableLabelContext variableLabel() throws RecognitionException {
		VariableLabelContext _localctx = new VariableLabelContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_variableLabel);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(188);
			_la = _input.LA(1);
			if ( !(_la==VAR_ID || _la==CONST_ID) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableContext extends ParserRuleContext {
		public TerminalNode VAR_ID() { return getToken(TuffyMLNGrammarParser.VAR_ID, 0); }
		public VariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TuffyMLNGrammarListener ) ((TuffyMLNGrammarListener)listener).enterVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TuffyMLNGrammarListener ) ((TuffyMLNGrammarListener)listener).exitVariable(this);
		}
	}

	public final VariableContext variable() throws RecognitionException {
		VariableContext _localctx = new VariableContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_variable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(190); match(VAR_ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumberContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(TuffyMLNGrammarParser.INT, 0); }
		public TerminalNode FLOAT() { return getToken(TuffyMLNGrammarParser.FLOAT, 0); }
		public NumberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_number; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TuffyMLNGrammarListener ) ((TuffyMLNGrammarListener)listener).enterNumber(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TuffyMLNGrammarListener ) ((TuffyMLNGrammarListener)listener).exitNumber(this);
		}
	}

	public final NumberContext number() throws RecognitionException {
		NumberContext _localctx = new NumberContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_number);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(192);
			_la = _input.LA(1);
			if ( !(_la==INT || _la==FLOAT) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExclTypeContext extends ParserRuleContext {
		public VariableLabelContext variableLabel() {
			return getRuleContext(VariableLabelContext.class,0);
		}
		public TerminalNode EXCL() { return getToken(TuffyMLNGrammarParser.EXCL, 0); }
		public ExclTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exclType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TuffyMLNGrammarListener ) ((TuffyMLNGrammarListener)listener).enterExclType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TuffyMLNGrammarListener ) ((TuffyMLNGrammarListener)listener).exitExclType(this);
		}
	}

	public final ExclTypeContext exclType() throws RecognitionException {
		ExclTypeContext _localctx = new ExclTypeContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_exclType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(194); variableLabel();
			setState(195); match(EXCL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public ExclTypeContext exclType() {
			return getRuleContext(ExclTypeContext.class,0);
		}
		public TerminalNode VAR_ID() { return getToken(TuffyMLNGrammarParser.VAR_ID, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TuffyMLNGrammarListener ) ((TuffyMLNGrammarListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TuffyMLNGrammarListener ) ((TuffyMLNGrammarListener)listener).exitType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_type);
		try {
			setState(199);
			switch ( getInterpreter().adaptivePredict(_input,17,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(197); match(VAR_ID);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(198); exclType();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StartNumContext extends ParserRuleContext {
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public StartNumContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_startNum; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TuffyMLNGrammarListener ) ((TuffyMLNGrammarListener)listener).enterStartNum(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TuffyMLNGrammarListener ) ((TuffyMLNGrammarListener)listener).exitStartNum(this);
		}
	}

	public final StartNumContext startNum() throws RecognitionException {
		StartNumContext _localctx = new StartNumContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_startNum);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(201); number();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EndNumContext extends ParserRuleContext {
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public EndNumContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_endNum; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TuffyMLNGrammarListener ) ((TuffyMLNGrammarListener)listener).enterEndNum(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TuffyMLNGrammarListener ) ((TuffyMLNGrammarListener)listener).exitEndNum(this);
		}
	}

	public final EndNumContext endNum() throws RecognitionException {
		EndNumContext _localctx = new EndNumContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_endNum);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(203); number();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
